--- a/index.html
+++ b/index.html
@@ -149,12 +149,12 @@
                 </div>
             </div>
             <ul class="row justify-content-md-center list-unstyled">
-                <li class="col-md-auto active">all</li>
-                <li class="col-md-auto">website</li>
-                <li class="col-md-auto">logo and branding</li>
-                <li class="col-md-auto">graphic design</li>
-                <li class="col-md-auto">online marketing</li>
-                <li class="col-md-auto">video</li>
+                <li data-class="all" class="col-md-auto active">all</li>
+                <li data-class=".websites" class="col-md-auto">website</li>
+                <li data-class=".logo" class="col-md-auto">logo and branding</li>
+                <li data-class=".design" class="col-md-auto">graphic design</li>
+                <li data-class=".marketing" class="col-md-auto">online marketing</li>
+                <li data-class=".video" class="col-md-auto">video</li>
             </ul>
         </div>
 
@@ -197,6 +197,6 @@
     <script src="./js/jquery-3.2.1.min.js"></script>
     <script src="./js/popper.min.js"></script>
     <script src="./js/bootstrap.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="./js/main.js"></script>
     </body>
 </html>
