--- a/index.html
+++ b/index.html
@@ -198,15 +198,15 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. lvoluptatem.</p>
                 </div>
             </div>
-            <div class="row">
+            <div class="row text-left">
                 <div class="col-md-4">
                     <div class="card">
                         <img class="card-img-top" src="./img/image11.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h4 class="card-title">Card title</h4>
-                            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            <a href="#" class="card-link">Go somewhere</a>
+                            <h6 class="card-subtitle mb-2 text-muted">March 24 2017</h6>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. lvoluptatem.</p>
+                            <a href="#" class="card-link">Read more</a>
                         </div>
                     </div>
                 </div>
@@ -215,9 +215,9 @@
                         <img class="card-img-top" src="./img/image12.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h4 class="card-title">Card title</h4>
-                            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            <a href="#" class="card-link">Go somewhere</a>
+                            <h6 class="card-subtitle mb-2 text-muted">March 24 2017</h6>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. lvoluptatem.</p>
+                            <a href="#" class="card-link">Read more</a>
                         </div>
                     </div>
                 </div>
@@ -226,9 +226,9 @@
                         <img class="card-img-top" src="./img/image13.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h4 class="card-title">Card title</h4>
-                            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            <a href="#" class="card-link">Go somewhere</a>
+                            <h6 class="card-subtitle mb-2 text-muted">March 24 2017</h6>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. lvoluptatem.</p>
+                            <a href="#" class="card-link">Read more</a>
                         </div>
                     </div>
                 </div>
